[gd_scene load_steps=17 format=3 uid="uid://1ena6ji4c1hu"]

[ext_resource type="Script" path="res://scripts/map/tutorial_map.gd" id="1_ariiq"]
[ext_resource type="PackedScene" uid="uid://bjt4bep2wgoxp" path="res://scenes/map/tile_map.tscn" id="1_n2mcg"]
[ext_resource type="Texture2D" uid="uid://dfntoku4apdpq" path="res://assets/arts/util/ThisWay.png" id="3_a0uyn"]
[ext_resource type="Script" path="res://scripts/util/BaljeonGi.gd" id="4_g0xpv"]
[ext_resource type="Texture2D" uid="uid://b2y52kki4sk4l" path="res://assets/arts/tileset/Cyberpunk Tileset/Animation/door_2.png" id="5_l3xp1"]
[ext_resource type="Script" path="res://scripts/util/TutorialDoor.gd" id="6_uisq4"]
[ext_resource type="AudioStream" uid="uid://ew2cgt7ca5c6" path="res://assets/sounds/SCI FI DOORS/DOOR_OPEN_39.wav" id="7_nikjp"]

[sub_resource type="Animation" id="Animation_uxaek"]
resource_name = "default"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(0.31864, 0.267943, 1),
"update": 0,
"values": [Vector2(548, 222), Vector2(558.655, 222), Vector2(548, 222)]
}

[sub_resource type="Animation" id="Animation_p0kn2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(548, 222)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ldhnp"]
_data = {
"RESET": SubResource("Animation_p0kn2"),
"default": SubResource("Animation_uxaek")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_0g3mr"]
radius = 15.0

[sub_resource type="AtlasTexture" id="AtlasTexture_vt87t"]
atlas = ExtResource("5_l3xp1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4pin"]
atlas = ExtResource("5_l3xp1")
region = Rect2(48, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v31nb"]
atlas = ExtResource("5_l3xp1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pqd3"]
atlas = ExtResource("5_l3xp1")
region = Rect2(144, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_dy1jc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vt87t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4pin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v31nb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pqd3")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="TutorialMap" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ariiq")

[node name="TileMap" parent="." instance=ExtResource("1_n2mcg")]
layer_0/name = "Walls"
layer_0/tile_data = PackedInt32Array(-262148, 917504, 27, -262147, 917504, 27, -262146, 917504, 27, -262145, 917504, 27, -327680, 917504, 27, -327679, 917504, 27, -327678, 917504, 27, -327677, 917504, 27, -327676, 917504, 27, -327675, 917504, 27, -262149, 720896, 26, -196613, 983040, 26, -131077, 983040, 26, -65541, 983040, 26, -5, 983040, 26, 65531, 983040, 26, 131067, 983040, 26, 196603, 983040, 26, 262139, 983040, 26, 327675, 983040, 26, 393211, 720896, 27, 393212, 917504, 25, 393213, 917504, 25, 393214, 917504, 25, 393215, 917504, 25, 327680, 917504, 25, 327681, 917504, 25, 327682, 917504, 25, 327683, 917504, 25, 327684, 917504, 25, 327685, 917504, 25, 196612, 65536, 27, -131076, 917504, 28, -131075, 917504, 28, -131074, 917504, 28, -131073, 917504, 28, -196608, 917504, 28, -196607, 917504, 28, -196606, 917504, 28, -196605, 917504, 28, -196604, 917504, 28, -196603, 917504, 28, -327674, 917504, 27, -327673, 917504, 27, -327672, 917504, 27, -327671, 917504, 27, -327670, 917504, 27, -327669, 917504, 27, -327668, 917504, 27, -327667, 917504, 27, -327666, 917504, 27, -327665, 917504, 27, -327664, 917504, 27, -327663, 917504, 27, -327662, 917504, 27, -327661, 917504, 27, -327660, 917504, 27, -327659, 917504, 27, -327658, 917504, 27, -327657, 917504, 27, -327656, 917504, 27, -327655, 917504, 27, -327654, 917504, 27, -327653, 917504, 27, -327652, 917504, 27, 327686, 917504, 25, 327687, 917504, 25, 327688, 917504, 25, 327689, 917504, 25, 327690, 917504, 25, 327691, 917504, 25, 327692, 917504, 25, 327693, 917504, 25, 327694, 917504, 25, 327695, 917504, 25, 327696, 917504, 25, 327697, 917504, 25, 327698, 917504, 25, 327699, 917504, 25, 327700, 917504, 25, 327701, 917504, 25, 327702, 917504, 25, 327703, 917504, 25, 327704, 917504, 25, 327705, 917504, 25, 327706, 917504, 25, 327707, 917504, 25, 327708, 917504, 25, 327709, 983040, 25, -327651, 917504, 27, -327650, 917504, 27, -327649, 917504, 27, -327648, 917504, 27, -327646, 786432, 26, -262110, 851968, 26, -196574, 851968, 26, -131038, 851968, 26, -65502, 851968, 26, 34, 851968, 26, 65570, 851968, 26, 131106, 851968, 26, 196642, 851968, 26, 262178, 851968, 26, 327714, 851968, 26, 393250, 851968, 26, 458786, 851968, 26, 393245, 983040, 26, 458781, 983040, 26, 524317, 983040, 26, 589853, 983040, 26, 655389, 983040, 26, 524322, 851968, 26, 589858, 851968, 26, 655394, 851968, 26, 720930, 851968, 26, 786466, 851968, 26, 720925, 983040, 26, 851997, 983040, 26, 852002, 851968, 26, 917538, 786432, 27, 917533, 720896, 27, 917534, 917504, 25, 917535, 917504, 25, 917536, 917504, 25, 917537, 917504, 25, 786461, 983040, 26, -196602, 917504, 28, -196601, 917504, 28, -196600, 917504, 28, -196599, 917504, 28, -196598, 917504, 28, -196597, 917504, 28, -196596, 917504, 28, -196595, 917504, 28, -196594, 917504, 28, -196593, 917504, 28, -196592, 917504, 28, -196591, 917504, 28, -196590, 917504, 28, -196589, 917504, 28, -196588, 917504, 28, -196587, 917504, 28, -196586, 917504, 28, -196585, 917504, 28, -196584, 917504, 28, -196583, 917504, 28, -196582, 917504, 28, -327647, 917504, 27, -196581, 917504, 28, -196580, 917504, 28, -196579, 917504, 28, -196578, 917504, 28, -196577, 917504, 28, -196576, 917504, 28, -196575, 917504, 28)
layer_1/tile_data = PackedInt32Array(-65540, 458752, 13, -65539, 655360, 13, -131067, 720896, 13, -65537, 786432, 13, -131071, 917504, 13, 196612, 917504, 16, 327676, 0, 15)
layer_2/name = "Ground"
layer_2/z_index = -2
layer_2/tile_data = PackedInt32Array(851998, 65536, 26, 851999, 65536, 26, 852000, 65536, 26, 852001, 65536, 26, 786465, 65536, 26, 786464, 65536, 26, 786463, 65536, 26, 786462, 65536, 26, 720926, 131072, 26, 720927, 131072, 26, 720928, 131072, 26, 720929, 131072, 26, 655393, 131072, 26, 589857, 131072, 26, 589856, 131072, 26, 524320, 131072, 26, 458784, 131072, 26, 393248, 131072, 26, 393249, 131072, 26, 327713, 131072, 26, 458785, 131072, 26, 524321, 131072, 26, 327712, 131072, 26, 327711, 131072, 26, 327710, 131072, 26, 393246, 131072, 26, 458782, 131072, 26, 524318, 131072, 26, 589854, 131072, 26, 655390, 131072, 26, 655391, 131072, 26, 655392, 131072, 26, 589855, 131072, 26, 524319, 131072, 26, 458783, 131072, 26, 393247, 131072, 26, 327709, 131072, 26, 327698, 65536, 27, 262162, 65536, 27, 196626, 65536, 27, 131090, 65536, 27, 65554, 65536, 27, 18, 65536, 27, -65518, 65536, 27, -131054, 65536, 27, -196590, 65536, 27, -262126, 65536, 27, -327662, 65536, 27, -327663, 65536, 27, -327664, 65536, 27, -327665, 65536, 27, -327666, 65536, 27, -327667, 65536, 27, -327668, 65536, 27, -327669, 65536, 27, -327670, 65536, 27, -327671, 65536, 27, -327672, 65536, 27, -327673, 65536, 27, -327674, 65536, 27, -327675, 65536, 27, -327676, 65536, 27, -327677, 65536, 27, -327678, 65536, 27, -327679, 65536, 27, -327680, 65536, 27, -262145, 65536, 27, -262146, 65536, 27, -262147, 65536, 27, -262148, 65536, 27, -262149, 65536, 27, -196613, 65536, 27, -131077, 65536, 27, -65541, 65536, 27, -5, 65536, 27, 65531, 65536, 27, 131067, 65536, 27, 196603, 65536, 27, 262139, 65536, 27, 327675, 65536, 27, 393211, 65536, 27, 393212, 65536, 27, 327676, 65536, 27, 262140, 65536, 27, 196604, 65536, 27, 131068, 65536, 27, 65532, 65536, 27, -4, 65536, 27, -65540, 65536, 27, -131076, 65536, 27, -196612, 65536, 27, -196611, 65536, 27, -131075, 65536, 27, -65539, 65536, 27, -3, 65536, 27, 65533, 65536, 27, 131069, 65536, 27, 196605, 65536, 27, 262141, 65536, 27, 327677, 65536, 27, 393213, 65536, 27, 393214, 65536, 27, 327678, 65536, 27, 262142, 65536, 27, 196606, 65536, 27, 131070, 65536, 27, 65534, 65536, 27, -2, 65536, 27, -65538, 65536, 27, -131074, 65536, 27, -196610, 65536, 27, -196609, 65536, 27, -131073, 65536, 27, -65537, 65536, 27, -1, 65536, 27, 65535, 65536, 27, 131071, 65536, 27, 196607, 65536, 27, 262143, 65536, 27, 327679, 65536, 27, 393215, 65536, 27, 327680, 65536, 27, 262144, 65536, 27, 196608, 65536, 27, 131072, 65536, 27, 65536, 65536, 27, 0, 65536, 27, -65536, 65536, 27, -131072, 65536, 27, -196608, 65536, 27, -262144, 65536, 27, -262143, 65536, 27, -196607, 65536, 27, -131071, 65536, 27, -65535, 65536, 27, 1, 65536, 27, 65537, 65536, 27, 131073, 65536, 27, 196609, 65536, 27, 262145, 65536, 27, 327681, 65536, 27, 327682, 65536, 27, 262146, 65536, 27, 196610, 65536, 27, 131074, 65536, 27, 65538, 65536, 27, 2, 65536, 27, -65534, 65536, 27, -131070, 65536, 27, -196606, 65536, 27, -262142, 65536, 27, -262141, 65536, 27, -196605, 65536, 27, -131069, 65536, 27, -65533, 65536, 27, 3, 65536, 27, 65539, 65536, 27, 131075, 65536, 27, 196611, 65536, 27, 262147, 65536, 27, 327683, 65536, 27, 327684, 65536, 27, 262148, 65536, 27, 196612, 65536, 27, 131076, 65536, 27, 65540, 65536, 27, 4, 65536, 27, -65532, 65536, 27, -131068, 65536, 27, -196604, 65536, 27, -262140, 65536, 27, -262139, 65536, 27, -196603, 65536, 27, -131067, 65536, 27, -65531, 65536, 27, 5, 65536, 27, 65541, 65536, 27, 131077, 65536, 27, 196613, 65536, 27, 262149, 65536, 27, 327685, 65536, 27, 327686, 65536, 27, 262150, 65536, 27, 196614, 65536, 27, 131078, 65536, 27, 65542, 65536, 27, 6, 65536, 27, -65530, 65536, 27, -131066, 65536, 27, -196602, 65536, 27, -262138, 65536, 27, -262137, 65536, 27, -196601, 65536, 27, -131065, 65536, 27, -65529, 65536, 27, 7, 65536, 27, 65543, 65536, 27, 131079, 65536, 27, 196615, 65536, 27, 262151, 65536, 27, 327687, 65536, 27, 327688, 65536, 27, 262152, 65536, 27, 196616, 65536, 27, 131080, 65536, 27, 65544, 65536, 27, 8, 65536, 27, -65528, 65536, 27, -131064, 65536, 27, -196600, 65536, 27, -262136, 65536, 27, -262135, 65536, 27, -196599, 65536, 27, -131063, 65536, 27, -65527, 65536, 27, 9, 65536, 27, 65545, 65536, 27, 131081, 65536, 27, 196617, 65536, 27, 262153, 65536, 27, 327689, 65536, 27, 327690, 65536, 27, 262154, 65536, 27, 196618, 65536, 27, 131082, 65536, 27, 65546, 65536, 27, 10, 65536, 27, -65526, 65536, 27, -131062, 65536, 27, -196598, 65536, 27, -262134, 65536, 27, -262133, 65536, 27, -196597, 65536, 27, -131061, 65536, 27, -65525, 65536, 27, 11, 65536, 27, 65547, 65536, 27, 131083, 65536, 27, 196619, 65536, 27, 262155, 65536, 27, 327691, 65536, 27, 327692, 65536, 27, 262156, 65536, 27, 196620, 65536, 27, 131084, 65536, 27, 65548, 65536, 27, 12, 65536, 27, -65524, 65536, 27, -131060, 65536, 27, -196596, 65536, 27, -262132, 65536, 27, -262131, 65536, 27, -196595, 65536, 27, -131059, 65536, 27, -65523, 65536, 27, 13, 65536, 27, 65549, 65536, 27, 131085, 65536, 27, 196621, 65536, 27, 262157, 65536, 27, 327693, 65536, 27, 327694, 65536, 27, 262158, 65536, 27, 196622, 65536, 27, 131086, 65536, 27, 65550, 65536, 27, 14, 65536, 27, -65522, 65536, 27, -131058, 65536, 27, -196594, 65536, 27, -262130, 65536, 27, -262129, 65536, 27, -196593, 65536, 27, -131057, 65536, 27, -65521, 65536, 27, 15, 65536, 27, 65551, 65536, 27, 131087, 65536, 27, 196623, 65536, 27, 262159, 65536, 27, 327695, 65536, 27, 327696, 65536, 27, 262160, 65536, 27, 196624, 65536, 27, 131088, 65536, 27, 65552, 65536, 27, 16, 65536, 27, -65520, 65536, 27, -131056, 65536, 27, -196592, 65536, 27, -262128, 65536, 27, -262127, 65536, 27, -196591, 65536, 27, -131055, 65536, 27, -65519, 65536, 27, 17, 65536, 27, 65553, 65536, 27, 131089, 65536, 27, 196625, 65536, 27, 262161, 65536, 27, 327697, 65536, 27, 327699, 65536, 27, 262163, 65536, 27, 196627, 65536, 27, 131091, 65536, 27, 65555, 65536, 27, 19, 65536, 27, -65517, 65536, 27, -131053, 65536, 27, -196589, 65536, 27, -262125, 65536, 27, -327661, 65536, 27, -327660, 65536, 27, -262124, 65536, 27, -196588, 65536, 27, -131052, 65536, 27, -65516, 65536, 27, 20, 65536, 27, 65556, 65536, 27, 131092, 65536, 27, 196628, 65536, 27, 262164, 65536, 27, 327700, 65536, 27, 327701, 65536, 27, 262165, 65536, 27, 196629, 65536, 27, 131093, 65536, 27, 65557, 65536, 27, 21, 65536, 27, -65515, 65536, 27, -131051, 65536, 27, -196587, 65536, 27, -262123, 65536, 27, -327659, 65536, 27, -327658, 65536, 27, -262122, 65536, 27, -196586, 65536, 27, -131050, 65536, 27, -65514, 65536, 27, 22, 65536, 27, 65558, 65536, 27, 131094, 65536, 27, 196630, 65536, 27, 262166, 65536, 27, 327702, 65536, 27, 327703, 65536, 27, 262167, 65536, 27, 196631, 65536, 27, 131095, 65536, 27, 65559, 65536, 27, 23, 65536, 27, -65513, 65536, 27, -131049, 65536, 27, -196585, 65536, 27, -262121, 65536, 27, -327657, 65536, 27, -327656, 65536, 27, -262120, 65536, 27, -196584, 65536, 27, -131048, 65536, 27, -65512, 65536, 27, 24, 65536, 27, 65560, 65536, 27, 131096, 65536, 27, 196632, 65536, 27, 262168, 65536, 27, 327704, 65536, 27, 327705, 65536, 27, 262169, 65536, 27, 196633, 65536, 27, 131097, 65536, 27, 65561, 65536, 27, 25, 65536, 27, -65511, 65536, 27, -131047, 65536, 27, -196583, 65536, 27, -262119, 65536, 27, -327655, 65536, 27, -327654, 65536, 27, -262118, 65536, 27, -196582, 65536, 27, -131046, 65536, 27, -65510, 65536, 27, 26, 65536, 27, 65562, 65536, 27, 131098, 65536, 27, 196634, 65536, 27, 262170, 65536, 27, 327706, 65536, 27, 327707, 65536, 27, 262171, 65536, 27, 196635, 65536, 27, 131099, 65536, 27, 65563, 65536, 27, 27, 65536, 27, -65509, 65536, 27, -131045, 65536, 27, -196581, 65536, 27, -262117, 65536, 27, -327653, 65536, 27, -327652, 65536, 27, -262116, 65536, 27, -196580, 65536, 27, -131044, 65536, 27, -65508, 65536, 27, 28, 65536, 27, 65564, 65536, 27, 131100, 65536, 27, 196636, 65536, 27, 262172, 65536, 27, 327708, 65536, 27, 917533, 65536, 27, 851997, 65536, 27, 786461, 65536, 27, 720925, 65536, 27, 655389, 65536, 27, 589853, 65536, 27, 524317, 65536, 27, 458781, 65536, 27, 393245, 65536, 27, 917534, 65536, 27, 917535, 65536, 27, 917536, 65536, 27, 917537, 65536, 27, 917538, 65536, 27, 852002, 65536, 27, 786466, 65536, 27, 720930, 65536, 27, 655394, 65536, 27, 589858, 65536, 27, 524322, 65536, 27, 458786, 65536, 27, 393250, 65536, 27, 327714, 65536, 27, 262178, 65536, 27, 196642, 65536, 27, 131106, 65536, 27, 65570, 65536, 27, 34, 65536, 27, -65502, 65536, 27, -131038, 65536, 27, -196574, 65536, 27, -262110, 65536, 27, -327646, 65536, 27, -327647, 65536, 27, -327648, 65536, 27, -327649, 65536, 27, -327650, 65536, 27, -327651, 65536, 27, -262115, 65536, 27, -196579, 65536, 27, -131043, 65536, 27, -65507, 65536, 27, 29, 65536, 27, 65565, 65536, 27, 131101, 65536, 27, 196637, 65536, 27, 262173, 65536, 27, 262174, 65536, 27, 196638, 65536, 27, 131102, 65536, 27, 65566, 65536, 27, 30, 65536, 27, -65506, 65536, 27, -131042, 65536, 27, -196578, 65536, 27, -262114, 65536, 27, -262113, 65536, 27, -196577, 65536, 27, -131041, 65536, 27, -65505, 65536, 27, 31, 65536, 27, 65567, 65536, 27, 131103, 65536, 27, 196639, 65536, 27, 262175, 65536, 27, 262176, 65536, 27, 196640, 65536, 27, 131104, 65536, 27, 65568, 65536, 27, 32, 65536, 27, -65504, 65536, 27, -131040, 65536, 27, -196576, 65536, 27, -262112, 65536, 27, -262111, 65536, 27, -196575, 65536, 27, -131039, 65536, 27, -65503, 65536, 27, 33, 65536, 27, 65569, 65536, 27, 131105, 65536, 27, 196641, 65536, 27, 262177, 65536, 27)

[node name="FirstEnemySpawner" type="Node2D" parent="."]
position = Vector2(119, 15)

[node name="SecondEnemySpawners" type="Node2D" parent="."]
position = Vector2(236, 58)

[node name="Node2D" type="Node2D" parent="SecondEnemySpawners"]

[node name="Node2D2" type="Node2D" parent="SecondEnemySpawners"]
position = Vector2(23, -65)

[node name="Node2D3" type="Node2D" parent="SecondEnemySpawners"]
position = Vector2(100, -32)

[node name="Node2D4" type="Node2D" parent="SecondEnemySpawners"]
position = Vector2(183, 7)

[node name="Node2D5" type="Node2D" parent="SecondEnemySpawners"]
position = Vector2(300, -76)

[node name="Node2D6" type="Node2D" parent="SecondEnemySpawners"]
position = Vector2(277, 139)

[node name="SecondEnemies" type="Node2D" parent="."]

[node name="ThisWay" type="Sprite2D" parent="."]
z_index = 999
texture_filter = 1
position = Vector2(548, 222)
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("3_a0uyn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="ThisWay"]
libraries = {
"": SubResource("AnimationLibrary_ldhnp")
}

[node name="BaljeonGi" type="Area2D" parent="."]
position = Vector2(515.06, 223.37)
script = ExtResource("4_g0xpv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BaljeonGi"]
shape = SubResource("CircleShape2D_0g3mr")

[node name="Door" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(134, -49)
sprite_frames = SubResource("SpriteFrames_dy1jc")

[node name="Area2D" type="Area2D" parent="Door"]
position = Vector2(0, 16)
script = ExtResource("6_uisq4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door/Area2D"]
shape = SubResource("CircleShape2D_0g3mr")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Door"]
stream = ExtResource("7_nikjp")
volume_db = 5.0
